--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           invaluable.
         </p>
       </div>
+     
       <div class="container-form">
         <h4>Try it free 7 days<span> then $20/mo. thereafter</span></h4>
         <form action="" id="form">
@@ -45,10 +46,15 @@
           <button id="button">Claim your free trial</button>
           <small
             >By clicking the button, you are agreeing to our
-            <span> Terms and Services</span></small
-          >
+            <span> Terms and Services</span></small>
+
+          
         </form>
+        <section class="end">
+          <p>Challenge by  <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1" target="_blank">Frontend mentor</a> coded by 
+              <a href="https://github.com/bisolafolorunso/intro-component-with-signup-1.git" target="_blank">Bee-Bee @2024</a></p>
+         </section>
       </div>
-    </main>
+    </main> 
   </body>
 </html>
